Fixes before presentation